--- a/VmodMonkeMapLoader/VmodMonkeMapLoader.csproj
+++ b/VmodMonkeMapLoader/VmodMonkeMapLoader.csproj
@@ -30,6 +30,9 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>Libs\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PhotonRealtime">
+      <HintPath>Libs\PhotonRealtime.dll</HintPath>
+    </Reference>
     <Reference Include="PhotonUnityNetworking">
       <HintPath>Libs\PhotonUnityNetworking.dll</HintPath>
     </Reference>
