--- a/VmodMonkeMapLoader/VmodMonkeMapLoader.csproj
+++ b/VmodMonkeMapLoader/VmodMonkeMapLoader.csproj
@@ -63,7 +63,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy /Y &quot;$(TargetDir)$(TargetName).dll&quot; &quot;C:\gry\Steam\steamapps\common\Gorilla Tag\BepInEx\plugins\VmodMonkeMapLoader\$(TargetName).dll&quot;" />
+    <Exec Command="copy /Y &quot;$(TargetDir)$(TargetName).dll&quot; &quot;C:\gry\Steam\steamapps\common\Gorilla Tag\BepInEx\plugins\MonkeMapLoader\$(TargetName).dll&quot;" />
   </Target>
 
 </Project>
