--- a/VmodMonkeMapLoader/VmodMonkeMapLoader.csproj
+++ b/VmodMonkeMapLoader/VmodMonkeMapLoader.csproj
@@ -27,6 +27,9 @@
     <Reference Include="ComputerInterface">
       <HintPath>Libs\ComputerInterface.dll</HintPath>
     </Reference>
+    <Reference Include="ComputerInterface.Commands">
+      <HintPath>Libs\ComputerInterface.Commands.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>Libs\Newtonsoft.Json.dll</HintPath>
     </Reference>
