--- a/MonkeMapLoader-Editor/MonkeMapLoader-Editor.csproj
+++ b/MonkeMapLoader-Editor/MonkeMapLoader-Editor.csproj
@@ -88,6 +88,7 @@
     <Compile Include="..\MonkeMapLoader\Behaviours\GorillaMapTriggerBase.cs">
       <Link>Behaviours\GorillaMapTriggerBase.cs</Link>
     </Compile>
+    <Compile Include="..\MonkeMapLoader\Helpers\SharedConstants.cs" Link="SharedConstants.cs" />
   </ItemGroup>
   
 </Project>
