--- a/MonkeMapLoader-Editor/MonkeMapLoader-Editor.csproj
+++ b/MonkeMapLoader-Editor/MonkeMapLoader-Editor.csproj
@@ -89,6 +89,7 @@
       <Link>Behaviours\GorillaMapTriggerBase.cs</Link>
     </Compile>
     <Compile Include="..\MonkeMapLoader\Helpers\SharedConstants.cs" Link="SharedConstants.cs" />
+    <Compile Include="..\MonkeMapLoader\Helpers\SerializableDictionary.cs" Link="SerializableDictionary.cs" />
   </ItemGroup>
   
 </Project>
