Fix build script

--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -113,14 +113,21 @@ jobs:
       with:
         name: Build
         path: Build
+      - name: check headcommit message
+        id: commit
+        run: |
+          echo ::set-output name=body::${str##*\\n} | tr -d '"'         # get the body
+
     - name: Upload to Discord
       env:
         WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
       if: "${{ env.WEBHOOK_URL != '' }}" # If a webhook is supplied, use it instead
       shell: bash
       run: |
+        str="$(jq '.head_commit.message' $GITHUB_EVENT_PATH)"
+        title=$(echo "$str" | head -1)
         curl https://raw.githubusercontent.com/ChaoticWeg/discord.sh/master/discord.sh -o discord.sh
         ./discord.sh \
         --webhook-url="${{ secrets.WEBHOOK_URL }}" \
-        --text '**${{github.actor}}** on **${{github.repository}}**(${{github.ref}}): *${{ github.event.head_commit.message }}*\n<https://github.com/${{github.repository}}/commit/${{github.sha}}>' \
+        --text "**${{github.actor}}** on **${{github.repository}}**(${{github.ref}}): *$title*\n<https://github.com/${{github.repository}}/commit/${{github.sha}}>" \
         --file Build.zip
